[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Maps/Map01.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Towers/towerDefense_tile251.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=3]
[ext_resource path="res://Assets/Towers/towerDefense_tile249.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Buttons/blue_button12.png" type="Texture" id=5]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/fastForward.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/right.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/pause.png" type="Texture" id=9]
[ext_resource path="res://Assets/Resources/Fonts/kfn_40.tres" type="DynamicFont" id=10]

[node name="GameScene" type="Node2D"]
script = ExtResource( 6 )

[node name="Map01" parent="." instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 80.0
margin_bottom = 480.0
rect_min_size = Vector2( 100, 400 )
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gun" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Gun"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missile" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 90.0
margin_right = 90.0
margin_bottom = 170.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Missile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameControls" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = -75.0
margin_right = -20.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePlay" type="TextureButton" parent="UI/HUD/GameControls"]
pause_mode = 2
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
pressed = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true

[node name="SpeedUp" type="TextureButton" parent="UI/HUD/GameControls"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color( 0, 0, 0, 0.470588 )
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="UI/HUD/InfoBar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SymbolMoney" type="Label" parent="UI/HUD/InfoBar/HBox"]
margin_right = 120.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
custom_colors/font_color = Color( 0.827451, 0.898039, 0.203922, 1 )
custom_fonts/font = ExtResource( 10 )
text = "$"
align = 1
valign = 1

[node name="Money" type="Label" parent="UI/HUD/InfoBar/HBox"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
custom_fonts/font = ExtResource( 10 )
text = "250"
align = 1
valign = 1

[node name="Spacing" type="Control" parent="UI/HUD/InfoBar/HBox"]
margin_left = 248.0
margin_right = 308.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SymbolHealth" type="TextureRect" parent="UI/HUD/InfoBar/HBox"]
margin_left = 312.0
margin_right = 372.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
mouse_filter = 2
expand = true

[node name="Health" type="Label" parent="UI/HUD/InfoBar/HBox"]
margin_left = 376.0
margin_right = 496.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
custom_fonts/font = ExtResource( 10 )
text = "100"
align = 1
valign = 1

[connection signal="pressed" from="UI/HUD/GameControls/PausePlay" to="UI" method="_on_PausePlay_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
